Fix form loading issues - Add missing formContainer div that StepManager needs - Remove duplicate DOMContentLoaded event listener - Add debugging logs to track initialization process - Ensure proper async loading order for components and steps

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
             <!-- Step Content Container -->
             <div id="step-container"></div>
             
+            <!-- Form Container for Dynamic Content -->
+            <div id="formContainer"></div>
+            
             <!-- Audit Results Container -->
             <div id="audit-container" style="display: none;"></div>
             <div id="auditComponent" style="display: none;"></div>
