--- a/index.html
+++ b/index.html
@@ -18,16 +18,19 @@
     <script src="https://unpkg.com/zod@3.25.56/lib/index.umd.js"></script>
     
     <!-- Customer.io Analytics -->
-    <script type="text/javascript">
+    <script>
     (function() {
-        var cio = window.cio = window.cio || [];
-        if (navigator.doNotTrack != "1") {
-            (function(b,o,n,g,s,r,c){if(b[s])return;b[s]={};b[s].q=[];c=o.createElement(n);
-            c.async=1;c.src=g;r=o.getElementsByTagName(n)[0];r.parentNode.insertBefore(c,r);
-            })(window,document,"script","https://assets.customer.io/assets/track.js","cio");
-        } else {
-            window.cioUnavailable = true;
+        // Check Do Not Track setting
+        if (navigator.doNotTrack === "1") {
+            window.cioanalyticsUnavailable = true;
+            return;
         }
+        
+        // Load Customer.io Analytics script
+        !function(){var i="cioanalytics", analytics=(window[i]=window[i]||[]);if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on","addSourceMiddleware","addIntegrationMiddleware","setAnonymousId","addDestinationMiddleware"];analytics.factory=function(e){return function(){var t=Array.prototype.slice.call(arguments);t.unshift(e);analytics.push(t);return analytics}};for(var e=0;e<analytics.methods.length;e++){var key=analytics.methods[e];analytics[key]=analytics.factory(key)}analytics.load=function(key,e){var t=document.createElement("script");t.type="text/javascript";t.async=!0;t.setAttribute('data-global-customerio-analytics-key', i);t.src="https://cdp.customer.io/v1/analytics-js/snippet/" + key + "/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(t,n);analytics._writeKey=key;analytics._loadOptions=e};analytics.SNIPPET_VERSION="4.15.3";
+        analytics.load("YOUR_WRITE_KEY");
+        analytics.page();
+        }}();
     })();
     </script>
 </head>
