Refactor Customer.io tracker into modular filesystem structure - Split 800+ line file into 7 focused modules - Fixed browser compatibility issues - Updated index.html to load modular files

--- a/index.html
+++ b/index.html
@@ -113,7 +113,15 @@
 
     <!-- JavaScript Modules -->
     <script src="js/schemas.js"></script>
-    <script src="js/customer-io-tracker.js"></script>
+    <!-- Customer.io Tracking Modules -->
+    <script src="js/customer-io/core.js"></script>
+    <script src="js/customer-io/utils.js"></script>
+    <script src="js/customer-io/step-tracker.js"></script>
+    <script src="js/customer-io/audit-tracker.js"></script>
+    <script src="js/customer-io/business-tracker.js"></script>
+    <script src="js/customer-io/chilipiper-tracker.js"></script>
+    <script src="js/customer-io/index.js"></script>
+    <!-- End Customer.io Tracking Modules -->
     <script src="js/component-loader.js"></script>
     <script src="js/progress-manager.js"></script>
     <script src="js/data-collector.js"></script>
