Simplify CustomerIOTracker initialization - Initialize immediately when modules load instead of waiting for Customer.io - Remove complex retry/polling logic - Customer.io will queue calls until ready

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     
     <!-- Customer.io Analytics -->
     <script>
+    console.log('=== CUSTOMER.IO INLINE SCRIPT EXECUTING ===');
     /* eslint-disable */
     (function() {
         console.log('Customer.io script starting...');
