--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
+    <link href="https://api.fontshare.com/v2/css?f[]=satoshi@300,301,400,401,500,501,700,701,900,901&f[]=clash-grotesk@700&display=swap" rel="stylesheet" />
     
     <!-- External Libraries -->
     <!-- Zod for validation -->
